[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/music.tres" type="Texture" id=1]
[ext_resource path="res://sprites/volume.tres" type="Texture" id=2]
[ext_resource path="res://src/Theme.tres" type="Theme" id=3]
[ext_resource path="res://objects/menu/Options.gd" type="Script" id=4]
[ext_resource path="res://sprites/fullscreen.tres" type="Texture" id=5]

[node name="Options" type="VBoxContainer"]
margin_right = 202.0
margin_bottom = 180.0
rect_scale = Vector2( 2, 2 )
custom_constants/separation = 15
alignment = 1
script = ExtResource( 4 )

[node name="SFX" type="HBoxContainer" parent="."]
margin_top = 45.0
margin_right = 202.0
margin_bottom = 61.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="SFX"]
margin_left = 41.0
margin_right = 57.0
margin_bottom = 16.0
texture = ExtResource( 2 )

[node name="SFX" type="HSlider" parent="SFX"]
margin_left = 61.0
margin_right = 161.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
theme = ExtResource( 3 )
max_value = 1.0
step = 0.0
value = 1.0

[node name="Music" type="HBoxContainer" parent="."]
margin_top = 76.0
margin_right = 202.0
margin_bottom = 92.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Music"]
margin_left = 41.0
margin_right = 57.0
margin_bottom = 16.0
texture = ExtResource( 1 )

[node name="Music" type="HSlider" parent="Music"]
margin_left = 61.0
margin_right = 161.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
theme = ExtResource( 3 )
max_value = 1.0
step = 0.0
value = 1.0

[node name="Fullscreen" type="HBoxContainer" parent="."]
margin_top = 107.0
margin_right = 202.0
margin_bottom = 134.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Fullscreen"]
margin_left = 77.0
margin_right = 93.0
margin_bottom = 27.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="Fullscreen" type="CheckButton" parent="Fullscreen"]
margin_left = 97.0
margin_right = 125.0
margin_bottom = 27.0
focus_mode = 0
theme = ExtResource( 3 )

[connection signal="value_changed" from="SFX/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="value_changed" from="Music/Music" to="." method="_on_Music_value_changed"]
[connection signal="toggled" from="Fullscreen/Fullscreen" to="." method="_on_Button_toggled"]
